refactor: 채택 기능 추가 및 스웨거 수정 및 추가