@@ -5,6 +5,9 @@ import com.qandding.domain.answer.entity.AnswerPost;
 import com.qandding.domain.answer.repository.AnswerImageRepository;
 import com.qandding.domain.answer.repository.AnswerPostRepository;
 import com.qandding.global.common.paging.PageResponse;
+import com.qandding.domain.answer.repository.AnswerSelectionRepository;
+import com.qandding.domain.question.entity.QuestionPost;
+import com.qandding.domain.question.repository.QuestionPostRepository;
 import com.qandding.global.storage.S3PresignService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
@@ -20,6 +23,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
+import java.util.Collections;
 
 @Service
 @RequiredArgsConstructor
@@ -29,17 +33,25 @@ public class AnswerFeedService {
     private final AnswerPostRepository answerPostRepository;
     private final AnswerImageRepository answerImageRepository;
     private final S3PresignService s3PresignService;
+    private final AnswerSelectionRepository answerSelectionRepository;
+    private final QuestionPostRepository questionPostRepository;
 
     public AnswerDtos.Combined getCombinedFeed(Long questionPostId, int page, int size) {
+        // 0) 채택된 답변 id 조회
+        QuestionPost question = questionPostRepository.findById(questionPostId).orElse(null);
+        final Long acceptedAnswerId = (question == null)
+                ? null
+                : answerSelectionRepository.findByQuestionPost(question)
+                    .map(s -> s.getAnswerPost().getId())
+                    .orElse(null);
+
         // 1) AI 답변 (있으면 1개)
-        AnswerDtos.Detail aiDetail = null;
+        AnswerDtos.Ai aiDetail = null;
         AnswerPost aiPost = answerPostRepository.findFirstByQuestionPost_IdAndAiAnswerIsNotNull(questionPostId);
         if (aiPost != null) {
-            List<String> images = answerImageRepository.findByAnswerPostIdOrderBySortOrderAsc(aiPost.getId())
-                    .stream().map(ai -> s3PresignService.presignGetUrlByUrl(ai.getUrl())).toList();
-            aiDetail = new AnswerDtos.Detail(
+            aiDetail = new AnswerDtos.Ai(
                     aiPost.getId(), aiPost.getTitle(), aiPost.getContent(),
-                    aiPost.getUser().getNickname(), aiPost.getCreatedAt(), images, true
+                    aiPost.getUser().getNickname(), aiPost.getCreatedAt()
             );
         }
 
@@ -62,9 +74,33 @@ public class AnswerFeedService {
         List<AnswerDtos.Detail> userDetails = userPage.getContent().stream().map(p ->
                 new AnswerDtos.Detail(
                         p.getId(), p.getTitle(), p.getContent(), p.getUser().getNickname(), p.getCreatedAt(),
-                        imageMap.getOrDefault(p.getId(), List.of()), false
+                        imageMap.getOrDefault(p.getId(), java.util.List.of()),
+                        java.util.Objects.equals(p.getId(), acceptedAnswerId)
                 )
-        ).collect(Collectors.toList());
+        ).toList();
+
+        // If there is a selected answer but it's not in the current page, include it at the top.
+        if (acceptedAnswerId != null && userDetails.stream().noneMatch(d -> d.isAccepted())) {
+            var acceptedOpt = answerPostRepository.findById(acceptedAnswerId);
+            if (acceptedOpt.isPresent()) {
+                AnswerPost ap = acceptedOpt.get();
+                if (ap.getAiAnswer() == null) { // only user answers
+                    List<String> accImgs = answerImageRepository.findByAnswerPostIdOrderBySortOrderAsc(ap.getId())
+                            .stream().map(ai -> s3PresignService.presignGetUrlByUrl(ai.getUrl())).toList();
+                    AnswerDtos.Detail acceptedDetail = new AnswerDtos.Detail(
+                            ap.getId(), ap.getTitle(), ap.getContent(), ap.getUser().getNickname(), ap.getCreatedAt(),
+                            accImgs, true
+                    );
+                    List<AnswerDtos.Detail> adjusted = new ArrayList<>();
+                    adjusted.add(acceptedDetail);
+                    adjusted.addAll(userDetails);
+                    if (adjusted.size() > userPage.getSize()) {
+                        adjusted = adjusted.subList(0, userPage.getSize());
+                    }
+                    userDetails = adjusted;
+                }
+            }
+        }
 
         Page<AnswerDtos.Detail> detailPage = new PageImpl<>(userDetails, pageable, userPage.getTotalElements());
         PageResponse<AnswerDtos.Detail> users = PageResponse.of(detailPage);
