@@ -16,6 +16,7 @@ import com.qandding.global.storage.S3PresignService;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Collections;
 import java.util.Map;
 import java.util.stream.Collectors;
 
@@ -64,9 +65,9 @@ public class CommentQueryRepository {
 		List<CommentDtos.Summary> content = base.stream()
 			.map(s -> new CommentDtos.Summary(
 				s.getId(), s.getNickname(), s.getContent(), s.getCreatedAt(),
-				imageMap.getOrDefault(s.getId(), List.of())
+				imageMap.getOrDefault(s.getId(), java.util.List.of())
 			))
-			.collect(Collectors.toList());
+			.toList();
 
 		return new PageImpl<>(content, pageable, total);
 	}
